k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashvista-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # Replace 'your-namespace' with the one assigned by your college
        image: nexus.imcc.com/repository/cashvista-backend:v1 
        ports:
        - containerPort: 8000
