k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashvista-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/postgresql/data # This is where Postgres saves data
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: cashvista-db-pvc
